# advent-calendar-csound-2024

./: README.md  pyproject.toml
csound/: 20241214.csd  20241214_live_coding.csd  Makefile  hello.csd
notebook/: fft copy.ipynb  fft.ipynb  generate_wave.ipynb
samples/: melody.aiff
