[tool.poetry]
name = "advent-calendar-csound-2024"
version = "0.1.0"
description = ""
authors = ["Kotaro Ambai <kamuy.camel.0225@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_calendar_2024"}]

[tool.poetry.dependencies]
python = "^3.11.3"
ipykernel = "^6.29.5"
numpy = "^2.2.0"
matplotlib = "^3.9.3"
scipy = "^1.14.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 119
select = ["ALL"]
ignore = [
  "D",
  "ANN",
  "FBT"
]
unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used
]
extend-include = ["*.ipynb"]

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_subclassing_any = false
strict = true

[tool.ruff.pydocstyle]
convention = "google"
